# nautobot-plugin-device-resources

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
src/nautobot_device_resources/: __init__.py  consts.py  filters.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
src/nautobot_device_resources/api/: serializers.py  urls.py  views.py
src/nautobot_device_resources/generic/: forms.py  views.py
src/nautobot_device_resources/migrations/: 0001_initial.py  0002_cpu_separate_model.py  0003_create_resources.py
src/nautobot_device_resources/templates/nautobot_device_resources/: cpu.html  cpu_edit.html  cpu_manufacturer_extension.html  device_resources.html  device_resources_edit.html
src/nautobot_device_resources/tests/: setups.py  test_forms.py  test_models.py  test_template_content.py  test_views.py
